Changelog
=========

**** BEGINNING OF VERSION 0.0.41 the selection of channels to use with HomeKit via a CCU Subsection is mandatory

Version 0.0.44 
fixed HM-LC-RGBW-WM for the iOS Home App

Version 0.0.43 

added warning if there is no definition of an subsection
added warning if there are more than 100 devices
fixed bug in Lux and Rain Sensor Service

Version 0.0.42
Bugfixes and WinMatic

Version 0.0.41
fix for setting values via RPC on the RF or wired Layer

Version 0.0.40
HM-CC-VG-1 is back


Version 0.0.39
Implemented HMIP Stuff

Version 0.0.38
internal changes

Version 0.0.37
added VirtualKey Event to trigger Update of all used Variables.
config -> "variable_update_trigger_channel":"NameOfVirtualKey"


Version 0.0.36
-BugFix 

Version 0.0.35
- added optional Window Config 

Version 0.0.34
-implemented virtual keys
merged changes from https://github.com/bpohvoodoo/homebridge-homematic

Version 0.0.33
- optional ccu cache

Version 0.0.32
- bugfix

Version 0.0.31
- Changes for CLIMATECONTROL_REGULATOR (tnx to BPoHVoodoo)
- implemented CCU response caching
- prepared for use with IOS10 Beta Home App - 
- 

Version 0.0.30
- implemented HMW-Sen-SC-12-*

Version 0.0.29
- changed Rega Port to 8181

Version 0.0.28
- added ON_Time Parameter

Version 0.0.27
- added pull Request from xfjx:master


Version 0.0.26
- implemented TILT Sensor
- added old Thermostats
- added Key Channels -> usefull for Scenetrigger (if you want to use keys you have to select your devices by a subsection)


Version: 0.0.25
- fixed State on vs 1% dimmer bug

Version: 0.0.24
- merged some Changes from https://github.com/JensBonse/homebridge-homematic

Version: 0.0.23
- added HM-LC-RGBW-WM

Version: 0.0.22
- improved handling for variables

Version: 0.0.21
- mapped Variables optional to Outlets

Version: 0.0.20
- Subsection Filter (see Readme)

Version: 0.0.19
- fixed Door/Window Contact State (open vs close)

Version: 0.0.18  
- fixed the update message
- removed LockStatus Event
