@@ -3,6 +3,8 @@
 var HomeKitGenericService = require('./HomeKitGenericService.js').HomeKitGenericService;
 var util = require("util");
 var sat;
+var curLevel;
+var lastLevel;
 
 function HomeMaticHomeKitRGBWService(log,platform, id ,name, type ,adress,special, cfg, Service, Characteristic) {
     HomeMaticHomeKitRGBWService.super_.apply(this, arguments);
@@ -17,33 +19,48 @@ HomeMaticHomeKitRGBWService.prototype.createDeviceService = function(Service, Ch
     var lightbulb = new Service.Lightbulb(this.name);
     this.services.push(lightbulb);
 
-    var cc = lightbulb.getCharacteristic(Characteristic.On)
-
     .on('get', function(callback) {
-      that.query("1:LEVEL",function(value) {
+      that.query("LEVEL",function(value) {
        
        if (value==undefined) {
         value = 0;
        }
+       that.curLevel = value;
        if (callback) callback(null,value>0);
       });
     }.bind(this))
 
     .on('set', function(value, callback) {
-      that.command("set","1:LEVEL" , (value==1)? "100": "0");
+//       that.log("Value " + value + " Cur " + that.curLevel + " Last " + that.lastLevel);
+       if ((value==1) && (that.curLevel==0)) {
+	      that.command("set","LEVEL" , that.lastLevel);
+       }
+       
+       if ((value==0) && ((that.curLevel>0) || (that.lastLevel > 0))) {
+          that.curLevel = 0;
+	      that.command("set","LEVEL" , 0);
+       }
+
+
       callback();
     }.bind(this));
+
 
 
     var brightness = lightbulb.getCharacteristic(Characteristic.Brightness)
 
     .on('get', function(callback) {
       that.query("1:LEVEL",function(value){
-       if (callback) callback(null,value);
+       that.curLevel = value;
+       that.lastLevel = value;
+        if (callback) callback(null,value);
       });
     }.bind(this))
 
     .on('set', function(value, callback) {
+      that.isWorking = true;
+       that.curLevel = value;
+       that.lastLevel = value;
       that.delayed("set","1:LEVEL" , value,100);
       callback();
     }.bind(this));
